--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "tailwindcss": "^3.3.3"
   },
   "dependencies": {
-    "gsap": "^3.12.2"
+    "gsap": "^3.12.2",
+    "vue-vimeo-player": "^1.1.2"
   }
 }
