--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
   },
   "devDependencies": {
     "@nuxt/devtools": "latest",
+    "@zadigetvoltaire/nuxt-gtm": "^0.0.13",
     "autoprefixer": "^10.4.16",
     "nuxt": "^3.7.3",
     "postcss": "^8.4.30",
     "tailwindcss": "^3.3.3"
   },
   "dependencies": {
+    "@nuxtjs/google-tag-manager": "^2.3.2",
+    "@nuxtjs/gtm": "^2.4.0",
     "gsap": "^3.12.2",
     "vue-vimeo-player": "^1.1.2"
   }
